move to kotin